--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "winston": "^3.11.0",
-    "lowdb": "^7.0.1"
+    "express": "^4.21.2",
+    "winston": "^3.17.0"
   },
   "engines": {
     "node": "16.x"
